log-output-server/manifests/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        # - name: ping-pongs
        #   persistentVolumeClaim:
        #     claimName: pingpong-pvc
      containers:
        - name: log-output
          image: buddy00/log-output:0.3.0
          volumeMounts:
            - name: shared-logs
              mountPath: /mnt/shared
        - name: log-output-server
          image: buddy00/log-output-server@sha256:47a010f018624247555022173daa9f5a7257450043bcb589a25ae5c5b04e2235
          volumeMounts:
            - name: shared-logs
              mountPath: /mnt/shared
            # - name: ping-pongs
            #   mountPath: /mnt/data
