log-output-server/manifests/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-server-svc
spec:
  selector:
    app: log-output
  type: NodePort
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3002
